--- a/src/FilesSafeReserve.UI/Components/Pages/SmartphonePage/SmartphonePage.razor
+++ b/src/FilesSafeReserve.UI/Components/Pages/SmartphonePage/SmartphonePage.razor
@@ -69,11 +69,11 @@
                             <div class="virtual-safes-element-icon">
                                 @if (ViewModel.SelectedVirtualSafe == safe)
                                 {
-                                    <Icon Name="IconName.Activity" />
+                                    <Icon Name="IconName.SafeFill" />
                                 }
                                 else
                                 {
-                                    <Icon Name="IconName.Phone" />
+                                    <Icon Name="IconName.Safe" />
                                 }
                             </div>
                             <div class="virtual-safes-element-name">
