--- a/src/FilesSafeReserve.UI/Components/Layout/NavMenu.razor
+++ b/src/FilesSafeReserve.UI/Components/Layout/NavMenu.razor
@@ -32,7 +32,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="SettingsPage">
+            <NavLink class="nav-link" href="settings">
                 <div class="item-icon">
                     <Icon class="item-icon" Name="IconName.GearFill"></Icon>
                 </div> Settings
